--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,14 @@
         </title>
         <link rel="stylesheet" type="text/css" href="{% static 'CSS/style.css' %}">
     </head>
-    <body>
+    <body style ="background-color: beige;">
         <div class="main" >
                 <div class="logo">
-                    <h2>_ADROIT_SCHEDULER_</h2>
+                    <h2><strong>SMART_TIMETABLEmATE</strong></h2>
+                    <h3> <strong>Master the Art of Scheduling<br>ONE SOLUTION for every Institution.</strong></h3>
                     <h4> Smart Ai makes this <strong>*Magic</strong> happen </h4>
                 </div>
-                <nav>
+                <nav style="background-color: beige;">
                 	<ul>
                 	<li><a href="{% url 'home' %}">Home</a></li>
                 	  <li><a href="{% url 'addinstructor' %}">Add Instructor</a></li>
