--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <div class="card">
 	<div class="txt">
 		<h2>Timetable Generator</h2>
-		<p>Let our Artificial Intelligence schedule your classes.
+		<p>Let our Artificial Intelligence schedule your classes.<br>
 		Add your university class details and generate Time Table.</p>
 	</div>
 	<div class="crdbtn">
